--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "isomorphic-dompurify": "^2.25.0",
+    "marked": "^16.0.0",
     "multer": "^1.4.5-lts.2",
     "openai": "^4.96.0",
     "pdf-parse": "^1.1.1"
