--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@pinecone-database/pinecone": "^5.1.2",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "isomorphic-dompurify": "^2.25.0",
+    "langchain": "^0.3.29",
     "marked": "^16.0.0",
     "multer": "^1.4.5-lts.2",
     "openai": "^4.96.0",
